reto funcionando con mongo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.host=localhost
 #spring.jpa.hibernate.ddl-auto = create
+#server.port=8080
 
-spring.mongodb.uri=mongodb+srv://admin:admin@clusterminticciclo4.pyitu.mongodb.net/DB_Cilo4?retryWrites=true&w=majority
-server.port=8080
+#spring.mongodb.uri=mongodb+srv://admin:admin@clusterminticciclo4.pyitu.mongodb.net/DB_Cilo4?retryWrites=true&w=majority
+
