--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-server.port=8080
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.auto-index-creation=true
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=DB_Ciclo4
-spring.jpa.hibernate.ddl-auto = create
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-
-
+#server.port=8080
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.auto-index-creation=true
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=DB_Ciclo4
+#spring.jpa.hibernate.ddl-auto = create
+#logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 #spring.data.mongodb.authentication-database=none
 #spring.data.mongodb.username=root
@@ -18,4 +16,5 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 #spring.jpa.hibernate.ddl-auto = create
 #server.port=8080
 
-#spring.mongodb.uri=mongodb+srv://admin:admin@clusterminticciclo4.pyitu.mongodb.net/DB_Cilo4?retryWrites=true&w=majority
+spring.mongodb.uri=mongodb+srv://admin:admin@clusterminticciclo4.pyitu.mongodb.net/DB_Cilo4?retryWrites=true&w=majority
+server.port=8080
